# rust-cqrses-bankaccount

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
examples/: dynamodb.rs
examples/aws/: Cargo.toml  diesel.toml
examples/aws/cmd/: example.rs  snapshot_runner.rs
examples/aws/cmd/grpc/: client.rs  server.rs
examples/aws/cmd/grpc/protos/: bank_account.proto  bank_account.rs  mod.rs
examples/aws/dynamodb/: snapshot.json
examples/aws/src/: eventpublisher.rs  eventstore.rs  lib.rs  schema.rs
examples/mysql/: Cargo.toml  build.rs
examples/mysql/cmd/: projector_runner.rs  snapshot_runner.rs
examples/mysql/cmd/grpc/: client.rs  server.rs
examples/mysql/cmd/grpc/protos/: bank_account_grpc.rs
examples/mysql/dynamodb/: event_store.json
examples/mysql/migrations/2019-10-12-020102_create_event_store/: down.sql  up.sql
examples/mysql/src/: constants.rs  dao.rs  db.rs  eventpublisher.rs  eventstore.rs  lib.rs  schema.rs
rust_cqrses_bankaccount/: Cargo.toml
rust_cqrses_bankaccount/src/: aggregate.rs  dao.rs  eventsourcing.rs  eventstore.rs  inmemory_eventstore.rs  lib.rs  projector.rs  snapshotter.rs
rust_cqrses_bankaccount/src/usecase/: command.rs
rust_cqrses_bankaccount_aws_example/: Cargo.toml
rust_cqrses_bankaccount_aws_example/src/: dao.rs  eventstore.rs  main.rs
src/: aggregate.rs  eventstore.rs  lib.rs
src/infra/: mod.rs  repository.rs
src/infra/eventstore/: dynamodb.rs  inmemory.rs  mod.rs
