[package]
name = "rust-cqrses-bankaccount"
version = "0.1.0"
authors = ["gurimusan <gurimusan@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.7", features = ["serde", "v4"] }
failure = "0.1"
rand = "0.6"
rusoto_core = "0.40.0"
rusoto_dynamodb = "0.40.0"

[[bin]]
name = "dynamodb"
path = "examples/dynamodb.rs"
