[package]
name = "rust_cqrses_bankaccount"
version = "0.1.0"
authors = ["gurimusan <gurimusan@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.7", features = ["serde", "v4"] }
failure = "0.1"
rand = "0.6"
