[package]
name = "rust_cqrses_bankaccount_aws_example"
version = "0.1.0"
authors = ["gurimusan <gurimusan@gmail.com>"]
edition = "2018"

[dependencies]
rust_cqrses_bankaccount = { path = "../rust_cqrses_bankaccount" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusoto_core = "0.40.0"
rusoto_dynamodb = "0.40.0"
diesel = { version = "1.4", features = ["mysql", "r2d2", "uuidv07", "chrono"] }

[[bin]]
name = "rust_cqrses_bankaccount_aws_example"
path = "src/main.rs"
